--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -1,5 +1,6 @@
 ---
 import octokit from '@/libs/octokit';
+import { PUBLIC_USERNAME } from 'astro:env/server';
 import { Book, Eye, GitFork, Star } from 'lucide-astro';
 import Link from './ui/link.astro';
 import Separator from './ui/separator.astro';
@@ -7,9 +8,7 @@ import Text from './ui/text.astro';
 
 type Props = { project: string };
 
-const repo = await octokit.repos
-  .get({ owner: import.meta.env.USERNAME, repo: Astro.props.project })
-  .then((res) => res.data);
+const repo = await octokit.repos.get({ owner: PUBLIC_USERNAME, repo: Astro.props.project }).then((res) => res.data);
 ---
 
 <div class="h-full rounded border shadow">
