--- a/src/components/post-github.astro
+++ b/src/components/post-github.astro
@@ -1,12 +1,12 @@
 ---
 import octokit from '@/libs/octokit';
-import { PUBLIC_USERNAME } from 'astro:env/server';
+import { USERNAME } from 'astro:env/server';
 import { Book, GitFork, Star } from 'lucide-astro';
 import Text from './ui/text.astro';
 
 type Props = { repo: string };
 
-const repo = await octokit.repos.get({ owner: PUBLIC_USERNAME, repo: Astro.props.repo }).then((res) => res.data);
+const repo = await octokit.repos.get({ owner: USERNAME, repo: Astro.props.repo }).then((res) => res.data);
 ---
 
 <a
