--- a/src/components/ui/code/components/block.astro
+++ b/src/components/ui/code/components/block.astro
@@ -14,7 +14,7 @@ const { class: className, ...props } = Astro.props;
     'bg-[--shiki-color-background] [&:not(&:has(span))]:text-[--shiki-color-text]',
     '[&:not(&:has(span))]:inline-flex [&:not(&:has(span))]:rounded [&:not(&:has(span))]:border',
     '[&:not(&:has(span))]:mx-0.5 [&:not(&:has(span))]:whitespace-nowrap [&:not(&:has(span))]:px-1',
-    '[&:not(&:has(span))]:decoration-clone',
+    '[&:not(&:has(span))]:decoration-clone [&:not(&:has(span))]:leading-normal',
     className,
   )}
 >
