✨ Improvements to search

--- a/src/components/ui/stepper/components/step.astro
+++ b/src/components/ui/stepper/components/step.astro
@@ -13,7 +13,7 @@ const { class: className, ...props } = Astro.props;
     'relative flex flex-col gap-6 pb-10 pl-10 last-of-type:pb-0',
     'before:absolute before:left-0 before:z-10 before:rounded-full before:bg-3',
     'before:flex before:size-6 before:items-center before:justify-center before:border before:text-xs',
-    'after:absolute after:left-3 after:top-0 after:z-0 after:h-full after:w-px after:bg-[hsl(var(--border))]',
+    'after:absolute after:left-3 after:top-0 after:z-0 after:h-full after:w-px after:rounded after:bg-[hsl(var(--border))]',
     className,
   )}
 >
