--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -5,12 +5,12 @@ import { Eye } from 'lucide-astro';
 import Badge from './ui/badge.astro';
 import Text from './ui/text.astro';
 
-type Props = { slug: CollectionEntry<'posts'>['slug'] };
+type Props = { id: CollectionEntry<'posts'>['id'] };
 
 const views = await db
   .update(PostView)
   .set({ views: sql`${PostView.views} + 1` })
-  .where(eq(PostView.post, Astro.props.slug))
+  .where(eq(PostView.post, Astro.props.id))
   .returning({ views: PostView.views })
   .get()
   .then((res) => res.views.toString().padStart(6, '0'))
