--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -13,7 +13,7 @@ import '@fontsource/inter/500.css';
 import '@fontsource/inter/700.css';
 import type { HTMLAttributes } from 'astro/types';
 import * as env from 'astro:env/server';
-import { ViewTransitions } from 'astro:transitions';
+import { ClientRouter } from 'astro:transitions';
 import { Github, Home, Linkedin, Twitter } from 'lucide-astro';
 import { twMerge } from 'tailwind-merge';
 
@@ -53,7 +53,7 @@ const {
     <link rel="sitemap" href="/sitemap-index.xml" />
     <link href={String(new URL(Astro.url.pathname, Astro.site)).replace(/\/+$/, '')} rel="canonical" />
     <script is:inline set:text="document.documentElement.classList.add('[&_[x-cloak]]:hidden')" />
-    <ViewTransitions />
+    <ClientRouter />
   </head>
   <body class="mx-auto flex min-h-[calc(100dvh-2rem)] max-w-screen-xl flex-col bg-1 shadow sm:rounded sm:border">
     <header class="sticky top-0 z-50 flex h-12 w-full items-center rounded-t border-b bg-1 px-4 text-xs">
