--- a/src/components/post-github.astro
+++ b/src/components/post-github.astro
@@ -1,16 +1,15 @@
 ---
-import octokit from '@/libs/octokit';
-import { USERNAME } from 'astro:env/server';
+import type { CollectionEntry } from 'astro:content';
 import { Book, GitFork, Star } from 'lucide-astro';
 import Text from './ui/text.astro';
 
-type Props = { repo: string };
+type Props = { repo: NonNullable<CollectionEntry<'posts'>['data']['repo']> };
 
-const repo = await octokit.repos.get({ owner: USERNAME, repo: Astro.props.repo }).then((res) => res.data);
+const { repo } = Astro.props;
 ---
 
 <a
-  href={repo.html_url}
+  href={repo.websiteUrl}
   target="_blank"
   rel="nofollow noopener noreferrer"
   aria-label={`Check out the github repo: ${repo.name}. ${repo.description}`}
@@ -23,7 +22,7 @@ const repo = await octokit.repos.get({ owner: USERNAME, repo: Astro.props.repo }
   <Text as="p" class="text-2 text-xs">{repo.description}</Text>
   <div class="mt-1.5 flex items-center gap-4 text-2 text-xs">
     <div class="mr-1 flex items-center gap-1"><div class="size-4 rounded-full border bg-3"></div>{repo.language}</div>
-    <div class="flex items-center gap-1"><Star class="size-4" aria-hidden />{repo.stargazers_count}</div>
-    <div class="flex items-center gap-1"><GitFork class="size-4" aria-hidden />{repo.forks_count}</div>
+    <div class="flex items-center gap-1"><Star class="size-4" aria-hidden />{repo.stargazers}</div>
+    <div class="flex items-center gap-1"><GitFork class="size-4" aria-hidden />{repo.forks}</div>
   </div>
 </a>
