✨ Migrate to astro-icon

--- a/src/components/post-card.astro
+++ b/src/components/post-card.astro
@@ -1,8 +1,8 @@
 ---
 import { type CollectionEntry, render } from 'astro:content';
-import { Calendar, Clock4 } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
 import Date from './ui/date.astro';
+import Icon from './ui/icon.astro';
 import Separator from './ui/separator.astro';
 import Text from './ui/text.astro';
 
@@ -27,11 +27,11 @@ const { remarkPluginFrontmatter } = await render(post);
     <Separator class="my-1.5" />
     <div class="flex justify-between gap-4 text-2 text-xs">
       <div class="flex items-center gap-2">
-        <Calendar class="size-3.5 shrink-0" aria-hidden />
+        <Icon name="calendar" class="size-3.5" />
         <Date value={post.data.published} />
       </div>
       <div class="flex items-center gap-2">
-        <Clock4 class="size-3.5 shrink-0" aria-hidden />
+        <Icon name="clock-4" class="size-3.5" />
         <Text>{remarkPluginFrontmatter.readingTime}</Text>
       </div>
     </div>
