--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -1,11 +1,11 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { ArrowUpRight } from 'lucide-astro';
 import { twMerge } from 'tailwind-merge';
+import Icon from './icon.astro';
 
-type Props = HTMLAttributes<'a'>;
+type Props = HTMLAttributes<'a'> & { icon?: string };
 
-const { class: className, href, target, rel, ...props } = Astro.props;
+const { class: className, href, target, rel, icon, ...props } = Astro.props;
 const external = href?.toString().startsWith('https://');
 ---
 
@@ -20,6 +20,6 @@ const external = href?.toString().startsWith('https://');
     className,
   )}
 >
-  <slot />
-  {external && <ArrowUpRight data-external-icon aria-hidden class="size-3 text-2" />}
+  {icon ? <Icon name={icon} /> : <slot />}
+  {external && !icon && <Icon name="arrow-up-right" data-external-icon class="size-3 text-2" />}
 </a>
