--- a/src/components/ui/note.astro
+++ b/src/components/ui/note.astro
@@ -1,7 +1,7 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { Info } from 'lucide-astro';
 import { twMerge } from 'tailwind-merge';
+import Icon from './icon.astro';
 
 type Props = HTMLAttributes<'aside'>;
 
@@ -14,6 +14,6 @@ const { class: className, ...props } = Astro.props;
   aria-labelledby={id}
   class={twMerge('flex items-start gap-2 rounded border border-l-8 bg-2 px-4 py-3 text-xs', className)}
 >
-  <p {id} aria-label="Note" aria-hidden><Info class="size-4 shrink-0 translate-y-1 text-2" /></p>
+  <p {id} aria-label="Note" aria-hidden><Icon name="info" class="translate-y-1 text-2" /></p>
   <section><slot /></section>
 </aside>
