--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,12 +1,12 @@
 ---
+import Icon from '@/components/ui/icon.astro';
 import Link from '@/components/ui/link.astro';
 import Text from '@/components/ui/text.astro';
 import Layout from '@/layouts/layout.astro';
-import { ArrowLeft } from 'lucide-astro';
 ---
 
 <Layout class="text-center">
   <Text as="h1" class="text-9xl">404</Text>
   <Text as="h2" class="text-2">Page Not Found</Text>
-  <Link href="/" class="mt-6 gap-3"><ArrowLeft class="size-4" aria-hidden />Go Back home </Link>
+  <Link href="/" class="mt-6 gap-3"><Icon name="arrow-left" />Go Back home </Link>
 </Layout>
