--- a/src/pages/blog/results.astro
+++ b/src/pages/blog/results.astro
@@ -4,6 +4,7 @@ export const partial = true;
 
 import Button from '@/components/ui/button.astro';
 import Date from '@/components/ui/date.astro';
+import Icon from '@/components/ui/icon.astro';
 import If from '@/components/ui/if.astro';
 import Separator from '@/components/ui/separator.astro';
 import Skeleton from '@/components/ui/skeleton.astro';
@@ -11,7 +12,6 @@ import Text from '@/components/ui/text.astro';
 import { z } from 'astro/zod';
 import { getCollection, render } from 'astro:content';
 import { db, sql } from 'astro:db';
-import { Dot, RefreshCw } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
 
 let posts = await Promise.all(
@@ -53,7 +53,7 @@ if (Astro.request.method === 'POST') {
             <Separator class="flex-1" />
             <div class="flex items-center text-2">
               <Date value={post.data.published} />
-              <Dot aria-hidden class="shrink-4 size-4" />
+              <Icon name="dot" />
               <Text>{post.remarkPluginFrontmatter.readingTime}</Text>
             </div>
           </a>
@@ -78,7 +78,7 @@ if (Astro.request.method === 'POST') {
         <Text as="p">No posts matched the search criteria.</Text>
       </div>
       <Button class="group mt-6" @click="$root.querySelector('form')?.reset(); submit()">
-        <RefreshCw aria-hidden class="size-3 group-hover:rotate-180 motion-safe:transition-transform" /> Reset Filters
+        <Icon name="refresh-cw" class="size-3 group-hover:rotate-180 motion-safe:transition-transform" /> Reset Filters
       </Button>
     </div>
   </If>
